@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 
-# Copyright (c) 2014, 2021, Oracle and/or its affiliates.
+# Copyright (c) 2014, 2022, Oracle and/or its affiliates.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2.0, as
@@ -692,7 +692,7 @@ class CMySQLCursorPreparedTests(tests.CMySQLCursorTests):
         "abc",
         u"MySQL 🐬",
         "x-large",
-        "random blob data"
+        bytearray(b"random blob data")
     )
 
     exp = (
